--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,10 @@
     height: 2rem;
 }
 
+.btn-menu {
+    display: none;
+}
+
 /* visual */
 .visual {
     margin-top: 3rem;
@@ -251,6 +255,14 @@
     margin-top: 1.2rem;
 }
 
+.only-tablet {
+    display: none;
+}
+
+.only-pc {
+    display: block;
+}
+
 /* event */
 .event {
     margin-top: 20rem;
@@ -362,6 +374,7 @@
     backdrop-filter: blur(5px);
     display: flex;
     gap: 5vw;
+    gap: 3rem;
 }
 
 .notice-list li a:hover {
@@ -372,7 +385,7 @@
 
 .notice-list li a strong {
     font-weight: 600;
-    width: 90%;
+    width: 95%;
 }
 
 .notice-list li a p {
@@ -491,11 +504,6 @@
     margin-top: 8rem;
 
     display: inline-block;
-}
-
-/* video */
-.video {
-    margin-top: 30rem;
 }
 
 /* footer */
@@ -716,4 +724,428 @@
     z-index: 10;
     pointer-events: none;
     user-select: none;
+}
+
+/* 태블릿 */
+@media screen and (max-width: 1024px) {
+    .inner {
+        width: 94.1406%;
+    }
+
+    .section-title {
+        font-size: 1.8rem;
+    }
+
+    .line {
+        width: 95rem;
+    }
+
+    .logo a {
+        display: block;
+        width: 6.5rem;
+        height: 5.9rem;
+        background: url(../img/logo.jpg) no-repeat 0 0 / contain;
+    }
+
+    .gnb {
+        display: none;
+    }
+
+    .btn-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 4rem;
+        height: 4rem;
+        background: url(../img/icon_list.svg) no-repeat 50%;
+    }
+
+    .utilmenu {
+        display: none;
+    }
+
+    .visual {
+        height: 100rem;
+    }
+
+    .menu-slider-wrap .swiper-slide {
+        width: 30rem;
+    }
+
+    .brand-con figure {
+        width: 50rem;
+        height: 30.7rem;
+    }
+
+    .brand-con {
+        gap: 8rem;
+    }
+
+    .brand-con dl dt {
+        font-size: 1.8rem;
+    }
+
+    .brand-con dl dd {
+        font-size: 1.6rem;
+    }
+
+    .franchsie-con figure {
+        width: 50rem;
+        height: 35rem;
+
+        /* width: 100%; */
+    }
+
+    .franchsie-con figure img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        border-radius: 10px;
+    }
+
+    .franchsie-con {
+        gap: 13rem;
+    }
+
+    .franchsie-con dl dt {
+        font-size: 1.8rem;
+    }
+
+    .franchsie-con dl dd {
+        font-size: 1.6rem;
+    }
+
+    .only-tablet {
+        display: block;
+        line-height: 1.5;
+    }
+    .only-pc {
+        display: none;
+    }
+
+    .btn-more {
+        margin-top: 3rem;
+        font-size: 1.3rem;
+
+        width: 9rem;
+        height: 3.5rem;
+
+        padding: 1rem 1.5rem;
+    }
+
+    .event-slider-wrap .swiper-slide {
+        width: 24rem;
+        height: 38rem;
+    }
+
+    .event-slider-wrap .swiper-slide figure {
+        width: 24rem;
+        height: 24rem;
+    }
+
+    .event-slider-wrap .swiper-slide p {
+        font-size: 1.5rem;
+    }
+
+    .notice-list li a {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 96.4rem;
+
+        height: 19.7rem;
+
+        width: 100%;
+
+        box-sizing: border-box;
+
+        gap: 2rem;
+    }
+    .img-box {
+        display: none;
+    }
+
+    .notice-list li a::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 1.5rem;
+        transform: translateY(-50%);
+        width: 14.2rem;
+        height: 16.2rem;
+        border-radius: 10px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    /* 각 li에 배경이미지 다르게 적용 */
+    .notice-list li:nth-child(1) a::before {
+        background-image: url(../img/notice01.png);
+    }
+
+    .notice-list li:nth-child(2) a::before {
+        background-image: url(../img/notice02.png);
+    }
+
+    .notice-list li:nth-child(3) a::before {
+        background-image: url(../img/notice03.png);
+    }
+
+    .notice-list li:nth-child(4) a::before {
+        background-image: url(../img/notice04.png);
+    }
+
+    .notice-list li:nth-child(5) a::before {
+        background-image: url(../img/notice05.png);
+    }
+
+    .notice-list li a strong {
+        margin-left: 20rem;
+        margin-left: 25%;
+        width: 65%;
+
+        font-size: 1.6rem;
+        line-height: 1.5;
+    }
+
+    .notice-list li a p {
+        font-size: 1.4rem;
+    }
+
+    .search-store h4 {
+        font-size: 2.8rem;
+    }
+
+    .search-store p {
+        font-size: 1.6rem;
+    }
+
+    .form-wrap {
+        width: 60rem;
+        height: 5.3rem;
+    }
+
+    .form-wrap input {
+        font-size: 1.5rem;
+    }
+
+    .form-wrap {
+        width: 55rem;
+        height: 5rem;
+    }
+
+    .form-wrap input {
+        font-size: 1.5rem;
+    }
+
+    .btn-more-search {
+        font-size: 1.3rem;
+
+        width: 9rem;
+        height: 3.5rem;
+
+        padding: 1rem 1.5rem;
+    }
+
+    .btn-app {
+        display: none;
+    }
+
+    .btn-franchise {
+        display: none;
+    }
+
+    .btn-top {
+        display: none;
+    }
+
+    .cursor {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .notice-list li a strong {
+        margin-left: 25%;
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 735px) {
+    .notice-list li a strong {
+        margin-left: 25%;
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .notice-list li a strong {
+        margin-left: 30%;
+        width: 65%;
+    }
+}
+
+/* 모바일 */
+@media screen and (max-width: 600px) {
+    .inner {
+        width: 93.8462%;
+    }
+
+    .section-title {
+        font-size: 1.6rem;
+    }
+
+    .more {
+        font-size: 1.4rem;
+        gap: 2px;
+    }
+
+    .more::before {
+        width: 1.7rem;
+        height: 1.7rem;
+
+        transform: translateY(0px);
+    }
+
+    .line {
+        width: 54.6rem;
+    }
+
+    .visual {
+        height: 50rem;
+    }
+
+    .menu-slider-wrap .swiper-slide {
+        width: 29rem;
+    }
+
+    .menu-slider-wrap .swiper-slide dl dt {
+        font-size: 1.8rem;
+    }
+
+    .menu-slider-wrap .swiper-slide dl dd {
+        font-size: 1.7rem;
+    }
+
+    .brand-con {
+        gap: 5rem;
+        flex-direction: column;
+    }
+
+    .brand-con figure {
+        width: 40rem;
+        height: 24rem;
+    }
+
+    .franchsie-con {
+        gap: 5rem;
+        flex-direction: column;
+    }
+
+    .franchsie-con figure {
+        width: 40rem;
+        height: 24rem;
+    }
+
+    .only-tablet {
+        display: none;
+    }
+    .only-pc {
+        display: block;
+    }
+
+    .event-slider {
+        padding: 0 0 6rem 0; /* 페이지네이션 높이만큼 공간 확보 */
+    }
+
+    .event-slider-wrap .swiper-slide {
+        width: 37rem;
+        height: 41.8rem;
+    }
+
+    .event-slider-wrap .swiper-slide figure {
+        width: 36.6rem;
+        height: 37rem;
+    }
+
+    .event-slider::before,
+    .event-slider::after {
+        width: 4rem;
+    }
+
+    .notice-list li a {
+        width: 47rem;
+
+        height: 19.7rem;
+
+        width: 100%; /* 화면 너비 꽉 차게 */
+
+        box-sizing: border-box; /* padding 포함해서 width 계산 */
+
+        gap: 1rem;
+    }
+
+    .notice-list li a::before {
+        width: 12.2rem;
+        height: 16.2rem;
+    }
+
+    .notice-list li a strong {
+        margin-left: 33%;
+        width: 65%;
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+
+    .notice-list li a p {
+        font-size: 1.4rem;
+    }
+
+    .search-store h4 {
+        font-size: 2.8rem;
+    }
+
+    .search-store p {
+        font-size: 1.6rem;
+    }
+
+    .form-wrap button {
+        width: 4.4rem;
+        height: 4.4rem;
+    }
+
+    .form-wrap {
+        width: 40rem;
+        height: 4.3rem;
+    }
+
+    .form-wrap input {
+        font-size: 1.4rem;
+    }
+
+    .btn-more-search {
+        font-size: 1.3rem;
+
+        width: 9rem;
+        height: 3.5rem;
+
+        padding: 1rem 1.5rem;
+    }
+
+    .foot-info li {
+        font-size: 1.3rem;
+    }
+
+    .company-info dt {
+        font-size: 1.3rem;
+    }
+
+    .company-info dd {
+        font-size: 1.3rem;
+    }
+
+    .copyright {
+        font-size: 1.27rem;
+    }
 }
